# parallel_programming

./: .gitignore  README.md  shell.nix
Lab2/: runner.py  utils.hpp
Lab2/common_task/: task_parallel_mpi.cc  task_parallel_omp.cc  task_serial.cc
Lab2/task_1d/: task_parallel.cc  task_serial.cc
Lab2/task_2d/: task_parallel.cc  task_serial.cc
OpenCL_sort/: CMakeLists.txt  main.cc
introduction_tasks/: README.md
introduction_tasks/task_1_hello/: CMakeLists.txt  main.cc
introduction_tasks/task_2_summ/: CMakeLists.txt  summ.cc
introduction_tasks/task_3_access/: CMakeLists.txt  access.cc
krayevaya/: CMakeLists.txt  main.cc  task_b1.cc  task_b4.cc
